--- a/resources.html
+++ b/resources.html
@@ -105,7 +105,7 @@
 <div class="team_area">
     <div class="container">
 
-
+        <a href = "https://www.youtube.com/channel/UCf-XeqiPtIg04RmD_RnJjNQ?view_as=subscriber"><h4 class="gmargin_botto"><img src="img/Youtube-icon.png" width="35px">Youtube Chanel</h4></a>
         <h4>
             Datasets
         </h4>
@@ -113,7 +113,7 @@
 
             <ul class = "unordered-list nav navbar-nav">
                 <li><a href="#Covid"><b>Covid-19 Graph Datasets </b></a>
-
+    
                     <p>Semantic and citation (retweet) networks constructed from COVID-19 related papers and twitter posts.</p>
 
                 </li>
