--- a/Gsum.html
+++ b/Gsum.html
@@ -104,7 +104,7 @@
                 <p align="center">A Summarization Technique for Heterogeneous Graphs</p><br>
 
                 <hr/>
-                <h4>About TGNet</h4>
+                <h4>About GSum</h4>
                 <p>Querying heterogeneous and large-scale knowledge graphs is expensive. This project studies a graph summarization framework to facilitate knowledge graph search. (1) We introduce a class of reduced summaries. Characterized by approximate graph pattern matching, these summaries are capable of summarizing entities in terms of their neighborhood similarity up to a certain hop, using small and informative graph patterns. (2) We study a diversified graph summarization problem. (a) We show that there exists a 2-approximation algorithm to discover diversified summaries. We further develop an anytime sequential algorithm which discovers summaries under resource constraints. (b) We present a new parallel algorithm with quality guarantees. (3) We also develop a summary-based query evaluation scheme, which only refers to a small number of summaries. </p>
 
 
