--- a/TGnet.html
+++ b/TGnet.html
@@ -134,7 +134,13 @@
             </ol>
 
 
-            <P>Contact Qi Song.</P>
+            <br/>
+
+            <h4>Questions?</h4>
+
+            <div>Contact <a href="https://songqi1990.github.io/"><b>Qi Song</b></a></div>
+
+            <br/>
 
             <h4>Acknowledgements</h4>
 
