--- a/proj.html
+++ b/proj.html
@@ -229,7 +229,7 @@
                 </div>
             </div>
 
-            <iframe class="paper-frame" src="https://dblp.org/search/semscholar?q=Yinghui%20Wu"></iframe>
+            <iframe class="paper-frame" src="https://dblp.org/search?q=%3Aauthor%3AYinghui_Wu%3A%7C%3Aauthor%3AQi_Song%3A"></iframe>
         </div>
 
 
