--- a/resources.html
+++ b/resources.html
@@ -105,7 +105,7 @@
 <div class="team_area">
     <div class="container">
 
-        <a href = "https://www.youtube.com/channel/UCf-XeqiPtIg04RmD_RnJjNQ?view_as=subscriber"><h4 class="gmargin_botto"><img src="img/Youtube-icon.png" width="35px">Youtube Chanel</h4></a>
+        <a href = "https://www.youtube.com/channel/UCf-XeqiPtIg04RmD_RnJjNQ?view_as=subscriber"><h4 class="gmargin_botto">Youtube Chanel  <img src="img/Youtube-icon.png" width="35px"></h4></a>
         <h4>
             Datasets
         </h4>
@@ -162,7 +162,7 @@
 
             </div>
         </div>
-    </div>>
+    </div>
 </div>
 
 <!-- testimonial_area  -->
