--- a/Gsum.html
+++ b/Gsum.html
@@ -148,7 +148,13 @@
 
                 </ol>
 
+                <br/>
 
+                <h4>Questions?</h4>
+
+                <div>Contact <a href="https://songqi1990.github.io/"><b>Qi Song</b></a></div>
+
+                <br/>
                 <h4>Acknowledgements</h4>
 
                 <p>This project is supported in part by NSF IIS-1633629 and Google Faculty Research Award.</p>
