--- a/group.html
+++ b/group.html
@@ -296,10 +296,10 @@
 
                 <hr/>
                 <h4 class = "gmargin_botto" align = "center">
-                    Alumni
+                    <a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="true" aria-controls="collapseExample">Show Alumni</a>
                 </h4>
 
-                <div class="row justify-content-center">
+                <div class="row justify-content-center collapse" id = "collapseExample" >
 
                         <ul class = "unordered-list">
 
