--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
     </div>
     <!-- slider_area_end -->
 
-    <div class="popular_catagory_area">
-        <div class="container">
-            <div class="row">
+    <div class="team_area" >
+        <div class="container" align="center">
+            <div class="row" >
                 <div class="col-xl-12">
-                    <div class="section_title mb-60 align-items-center">
+                    <div class="section_title mb-60 align-items-center justify-content-center">
                         <h4>
                             Research Areas
                         </h4>
 
-                        <div class="section_title  align-items-center">
-                            <ul class="unordered-list">
+                        <div class="">
+                            <ul class="list">
                                 <li>Knowledge and Data Management, Data Systems, Information Network, Information quality</li>
                                 <li>Data systems for Cyber-Energy Systems, Smart Environment, Social & Web, and Security</li>
                             </ul>
@@ -142,10 +142,10 @@
     </div>
 
 
-    <div class="explorer_europe">
+    <div class="explorer_europe" align="center">
         <div class="container">
             <div class="explorer_wrap">
-                <div class= "section_title row align-items-center">
+                <div class= "section_title align-items-center">
                     <div class="col-xl-6 col-md-4">
                         <h4>Collaborators</h4>
                     </div>
@@ -167,7 +167,7 @@
                             <div class="col-lg-4"><p><img src="img/collab/amazon.png" alt=""  height="150" width="150"></p></div>
                             <div class="col-lg-4"><p><img src="img/collab/wsu.png" alt=""  height="120" width="170"></p></div>
                             <div class="col-lg-4"><p><img src="img/collab/NEC.png" alt=""  height="150" width="150"></p></div>
-                            <div class="col-lg-4"><p> <img src="img/collab/ARL.png" alt=""  height="150" width="150"></p></div>
+                            <div class="col-lg-4"><p> <img src="img/collab/ARL.png" alt=""  height="130" width="170"></p></div>
                         </div>
                     </div>
 
