--- a/courses.html
+++ b/courses.html
@@ -47,7 +47,8 @@
 
                             <div class="logo">
                                 <a href="index.html">
-                                    <p style="color:whitesmoke;"><spam><img src = "img/logo.png" width = "100px" ></spam>CWRU Database Group</p>
+                                    <span><img src = "img/logoNew.png" width = "80px" height = "40" ></span>
+                                    <p style="color:whitesmoke;">  CWRU Database Group</p>
                                 </a>
                             </div>
                         </div>
@@ -55,10 +56,10 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
+                                        <li><a href="index.html">Home</a></li>
                                         <li><a href="group.html">People</a></li>
                                         <li><a href="proj.html">Research</a></li>
                                         <li><a href="courses.html">Courses</a></li>
-                                        <li><a href="#">News</a></li>
                                         <li><a href="resources.html">Resources</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
@@ -114,16 +115,16 @@
 
         <div class="row justify-content-center">
 
-            <ul class = "unordered-list">
+            <ul class >
 
-                <li><h5><b>EECS 433:  Database Systems (Spring 20)</b></h5>
+                <li><h5><b style="color:darkblue">EECS 433:  Database Systems (Spring 20)</b></h5>
 
                     <p>Basic issues and advanced research topics in data management systems for Big Data: Physical data organization.
                         Relational databases/noSQL/newSQL systems. XML/RDF Data. Data Constraints.
                         Query Languages. Query Optimization and Approximate Query Processing. Data quality.  Recommended preparation: MATH 304. EECS 341.</p>
 
                 </li>
-                <li><h5><b>Structured & Unstructured Data  (Fall 19)</b></h5>
+                <li><h5><b style="color:darkblue">Structured & Unstructured Data  (Fall 19)</b></h5>
 
                     <p>This course introduces fundamental and new data models (relational tables, XML/RDF, and unstructured text/image),
                         constraints, query processing and indexing, and techniques to cope with new challenges from big data analytics and applications (e.g., Web knowledge, Q&A systems,
@@ -143,17 +144,17 @@
 
         <div class="row">
 
-            <ul class = "unordered-list">
+            <ul class>
 
-                <li><h5><b>Automata and Formal Languages (Fall 17-18)</b></h5>
-
-
-                </li>
-                <li><h5><b>Big Data (Fall 16-18)</b></h5>
+                <li><h5><b style="color:darkblue">Automata and Formal Languages (Fall 17-18)</b></h5>
 
 
                 </li>
-                <li><h5><b>Advanced Databases (Spring 17-19)</b></h5>
+                <li><h5><b style="color:darkblue">Big Data (Fall 16-18)</b></h5>
+
+
+                </li>
+                <li><h5><b style="color:darkblue">Advanced Databases (Spring 17-19)</b></h5>
 
 
                 </li>
