--- a/group.html
+++ b/group.html
@@ -47,7 +47,8 @@
 
                                 <div class="logo">
                                     <a href="index.html">
-                                        <p style="color:whitesmoke;"><spam><img src = "img/logo.png" width = "100px" ></spam>CWRU Database Group</p>
+                                        <span><img src = "img/logoNew.png" width = "80px" height = "40" ></span>
+                                        <p style="color:whitesmoke;">  CWRU Database Group</p>
                                     </a>
                                 </div>
                             </div>
@@ -55,10 +56,10 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
+                                            <li><a href="index.html">Home</a></li>
                                             <li><a href="group.html">People</a></li>
                                             <li><a href="proj.html">Research</a></li>
                                             <li><a href="courses.html">Courses</a></li>
-                                            <li><a href="#">News</a></li>
                                             <li><a href="resources.html">Resources</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
@@ -301,26 +302,26 @@
 
                 <div class="row justify-content-center collapse" id = "collapseExample" >
 
-                        <ul class = "unordered-list">
+                        <ul class>
 
-                            <li><h5>PhD:</h5>
+                            <li><h5><b style="color:darkblue">PhD:</b></h5>
 
                                     <p>Mengze Zhou (PacifiCorp)</p>
 
                             </li>
-                            <li><h5>Master:</h5>
+                            <li><h5><b style="color:darkblue">Master:</b></h5>
                                 <p>Sukhjinder Singh (Microsoft), Keyvan Sasani (BigStream), Jingling Tao (Mercury Systems Inc.), Xin Zhang (Ph.D.@UCR), Giridhar Manoharan</p>
                             </li>
 
-                            <li><h5>Visiting Scholars:</h5>
+                            <li><h5> <b style="color:darkblue">Visiting Scholars:</b></h5>
                             <p>Xinqiang Xie (Northeast University),  Hui Sun (Associate Professor, Renmin University), Ling Xiong (Professor, Wuhan University of Science and Technology). </p>
                            </li>
-                            <li><h5>Undergraduate (NSF REU):</h5>
+                            <li><h5><b style="color:darkblue">Undergraduate (NSF REU):</b></h5>
                                 <p>Nathaniel David Sprecher (Grove City Colledge, summer 19), Evan McElheny (Marist Colledge, Summer 18), Casey Fleck (Coastal Carolina University, Summer 17),
                                     Shayan Monadjemi (University of Texas Dallas, Summer 2016), Rebecca Baumher (University of Pennsylvania, Summer 15) </p>
                             </li>
 
-                            <li><h5>Undergraduate (Intern):</h5>
+                            <li><h5><b style="color:darkblue">Undergraduate (Intern):</b></h5>
                                 <p>Jialiang Shen (Beijing University of Posts and Telecommunications, Summer 17). </p>
                             </li>
 
