--- a/pubs.html
+++ b/pubs.html
@@ -38,15 +38,17 @@
 
     <!-- header-start -->
     <header>
-        <div class="header-area ">
+        <div class="header-area">
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid ">
                     <div class="header_bottom_border">
                         <div class="row align-items-center">
                             <div class="col-xl-3 col-lg-2">
+
                                 <div class="logo">
                                     <a href="index.html">
-                                        <p style="color:whitesmoke;">CWRU Database Group</p>
+                                        <span><img src = "img/logoNew.png" width = "80px" height = "40" ></span>
+                                        <p style="color:whitesmoke;">  CWRU Database Group</p>
                                     </a>
                                 </div>
                             </div>
@@ -55,11 +57,10 @@
                                     <nav>
                                         <ul id="navigation">
                                             <li><a href="index.html">Home</a></li>
-                                            <li><a href="#">Research</a></li>
                                             <li><a href="group.html">People</a></li>
-                                            <li><a href="#">Publication</a></li>
-                                            <li><a href="proj.html">Projects</a></li>
-                                            <li><a href="resources.html">Datasets</a></li>
+                                            <li><a href="proj.html">Research</a></li>
+                                            <li><a href="courses.html">Courses</a></li>
+                                            <li><a href="resources.html">Resources</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
