--- a/TGnet.html
+++ b/TGnet.html
@@ -38,45 +38,45 @@
 
     <!-- header-start -->
     <header>
-        <header>
-            <div class="header-area">
-                <div id="sticky-header" class="main-header-area">
-                    <div class="container-fluid ">
-                        <div class="header_bottom_border">
-                            <div class="row align-items-center">
-                                <div class="col-xl-3 col-lg-2">
+        <div class="header-area">
+            <div id="sticky-header" class="main-header-area">
+                <div class="container-fluid ">
+                    <div class="header_bottom_border">
+                        <div class="row align-items-center">
+                            <div class="col-xl-3 col-lg-2">
 
-                                    <div class="logo">
-                                        <a href="index.html">
-                                            <p style="color:whitesmoke;"><span><img src = "img/logo.png" width = "100px" ></span>CWRU Database Group</p>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="col-xl-6 col-lg-7">
-                                    <div class="main-menu  d-none d-lg-block">
-                                        <nav>
-                                            <ul id="navigation">
-                                                <li><a href="group.html">People</a></li>
-                                                <li><a href="proj.html">Research</a></li>
-                                                <li><a href="courses.html">Courses</a></li>
-                                                <li><a href="#">News</a></li>
-                                                <li><a href="resources.html">Resources</a></li>
-                                                <li><a href="contact.html">Contact</a></li>
-                                            </ul>
-                                        </nav>
-                                    </div>
-                                </div>
-
-                                <div class="col-12">
-                                    <div class="mobile_menu d-block d-lg-none"></div>
+                                <div class="logo">
+                                    <a href="index.html">
+                                        <span><img src = "img/logoNew.png" width = "80px" height = "40" ></span>
+                                        <p style="color:whitesmoke;">  CWRU Database Group</p>
+                                    </a>
                                 </div>
                             </div>
-                        </div>
+                            <div class="col-xl-6 col-lg-7">
+                                <div class="main-menu  d-none d-lg-block">
+                                    <nav>
+                                        <ul id="navigation">
+                                            <li><a href="index.html">Home</a></li>
+                                            <li><a href="group.html">People</a></li>
+                                            <li><a href="proj.html">Research</a></li>
+                                            <li><a href="courses.html">Courses</a></li>
+                                            <li><a href="resources.html">Resources</a></li>
+                                            <li><a href="contact.html">Contact</a></li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
 
+                            <div class="col-12">
+                                <div class="mobile_menu d-block d-lg-none"></div>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
-        </header>
+        </div>
+    </header>
         <!-- header-end -->
          <!-- bradcam_area  -->
     <div class="slider_area_shrink">
